# async-file-service

./: .env  .env.dist  .flake8  Dockerfile  README.md  docker-compose.yml  logging.ini  pyproject.toml  sender.py  server.py
tests/: conftest.py  test_sample.py
